--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.0",
     "moment": "^2.19.2",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
