--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.19.2",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
+    "react-datetime": "^2.11.1",
     "react-dom": "^16.0.0",
     "react-notification-system-redux": "^1.2.0",
     "react-redux": "^5.0.6",
