--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "moment": "^2.19.2",
+    "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-datetime": "^2.11.1",
